Fixed services page on mobile.

--- a/components/ServiceCard/ServiceCard.css
+++ b/components/ServiceCard/ServiceCard.css
@@ -12,7 +12,7 @@
     margin-right: 20px;
 
     @media (--xs-viewport) {
-      margin: 0;
+      margin: 0 0 10px;
     }
   }
 
@@ -75,5 +75,6 @@
 
   @media (--xs-viewport) {
     margin: 0;
+    max-width: 310px;
   }
 }
