--- a/components/Services/Services.css
+++ b/components/Services/Services.css
@@ -231,6 +231,7 @@
           @media (--sm-viewport) {
             font-size: 18px;
             padding: 5px;
+            overflow-wrap: break-word;
           }
         }
       }
